# safeguard-miner

./: .dockerignore  .gitignore  Dockerfile  README.md  concerns.py  consistency.py  docs-critique.md  env.example  hitl.py  miner.py  prober.py  pyproject.toml  recon.md  run_miner.sh  score.py  variants.py
k8s/: README.md  create-secrets.sh  deploy.sh  deployment.yaml  namespace.yaml
k8s/test/: deploy.sh  deployment.yaml
