[project]
name = "safeguard-miner"
version = "0.0.1"
description = "Third-party adversarial mining rig for the Safeguard Bittensor subnet"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "python-dotenv",
  "bittensor",
  "bittensor-wallet",
  # Required by FastAPI Form(...) — used on /hitl/submit-label for the
  # dashboard label form POST. Without it, FastAPI raises at route-
  # register time and miner.py crashes on `import hitl`.
  "python-multipart",
]

[tool.setuptools]
py-modules = ["miner", "prober", "score"]
